--- a/templates/broker.html
+++ b/templates/broker.html
@@ -148,6 +148,28 @@
                     </div>
                     {% endif %}
                     
+                    {% if configured_brokers %}
+                    <div class="alert alert-info shadow-lg mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                        </svg>
+                        <div>
+                            <h3 class="font-bold">Configured Brokers</h3>
+                            <div class="text-sm">You have {{ configured_brokers|length }} broker(s) configured: {{ configured_brokers|join(', ') }}</div>
+                        </div>
+                    </div>
+                    {% elif not broker_name %}
+                    <div class="alert alert-warning shadow-lg mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current shrink-0 h-6 w-6" fill="none" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path>
+                        </svg>
+                        <div>
+                            <h3 class="font-bold">No Brokers Configured</h3>
+                            <div class="text-sm">Please configure your broker credentials first in <a href="/broker/setup" class="link link-primary">Broker Setup</a></div>
+                        </div>
+                    </div>
+                    {% endif %}
+                    
                     <form id="trading-platform-form" class="space-y-6">
                         <div class="form-control w-full">
                             <label class="label">
@@ -155,30 +177,30 @@
                             </label>
                             <select id="platform-select" name="platform" class="select select-bordered w-full">
                                 <option value="" disabled selected>Select a Broker</option>
-                                <option value="fivepaisa" {{ 'disabled' if broker_name != 'fivepaisa' }}>5 Paisa {{ '(Disabled)' if broker_name != 'fivepaisa' }}</option>
-                                <option value="fivepaisaxts" {{ 'disabled' if broker_name != 'fivepaisaxts' }}>5 Paisa (XTS) {{ '(Disabled)' if broker_name != 'fivepaisaxts' }}</option>
-                                <option value="aliceblue" {{ 'disabled' if broker_name != 'aliceblue' }}>Alice Blue {{ '(Disabled)' if broker_name != 'aliceblue' }}</option>
-                                <option value="angel" {{ 'disabled' if broker_name != 'angel' }}>Angel One {{ '(Disabled)' if broker_name != 'angel' }}</option>
-                                <option value="compositedge" {{ 'disabled' if broker_name != 'compositedge' }}>CompositEdge {{ '(Disabled)' if broker_name != 'compositedge' }}</option>
-                                <option value="dhan" {{ 'disabled' if broker_name != 'dhan' }}>Dhan {{ '(Disabled)' if broker_name != 'dhan' }}</option>
-                                <option value="dhan_sandbox" {{ 'disabled' if broker_name != 'dhan_sandbox' }}>Dhan (Sandbox) {{ '(Disabled)' if broker_name != 'dhan_sandbox' }}</option>
-                                <option value="firstock" {{ 'disabled' if broker_name != 'firstock' }}>Firstock {{ '(Disabled)' if broker_name != 'firstock' }}</option>
-                                <option value="flattrade" {{ 'disabled' if broker_name != 'flattrade' }}>Flattrade {{ '(Disabled)' if broker_name != 'flattrade' }}</option>
-                                <option value="fyers" {{ 'disabled' if broker_name != 'fyers' }}>Fyers {{ '(Disabled)' if broker_name != 'fyers' }}</option>
-                                <option value="groww" {{ 'disabled' if broker_name != 'groww' }}>Groww {{ '(Disabled)' if broker_name != 'groww' }}</option>
-                                <option value="ibulls" {{ 'disabled' if broker_name != 'ibulls' }}>Ibulls {{ '(Disabled)' if broker_name != 'ibulls' }}</option>
-                                <option value="iifl" {{ 'disabled' if broker_name != 'iifl' }}>IIFL {{ '(Disabled)' if broker_name != 'iifl' }}</option>
-                                <option value="jainam" {{ 'disabled' if broker_name != 'jainam' }}>Jainam (Retail) {{ '(Disabled)' if broker_name != 'jainam' }}</option>
-                                <option value="jainampro" {{ 'disabled' if broker_name != 'jainampro' }}>Jainam (Dealer) {{ '(Disabled)' if broker_name != 'jainampro' }}</option>
-                                <option value="kotak" {{ 'disabled' if broker_name != 'kotak' }}>Kotak Securities {{ '(Disabled)' if broker_name != 'kotak' }}</option>
-                                <option value="paytm" {{ 'disabled' if broker_name != 'paytm' }}>Paytm Money {{ '(Disabled)' if broker_name != 'paytm' }}</option>
-                                <option value="pocketful" {{ 'disabled' if broker_name != 'pocketful' }}>Pocketful {{ '(Disabled)' if broker_name != 'pocketful' }}</option>
-                                <option value="shoonya" {{ 'disabled' if broker_name != 'shoonya' }}>Shoonya {{ '(Disabled)' if broker_name != 'shoonya' }}</option>
-                                <option value="tradejini" {{ 'disabled' if broker_name != 'tradejini' }}>Tradejini {{ '(Disabled)' if broker_name != 'tradejini' }}</option>
-                                <option value="upstox" {{ 'disabled' if broker_name != 'upstox' }}>Upstox {{ '(Disabled)' if broker_name != 'upstox' }}</option>
-                                <option value="wisdom" {{ 'disabled' if broker_name != 'wisdom' }}>Wisdom Capital{{ '(Disabled)' if broker_name != 'wisdom' }}</option>
-                                <option value="zebu" {{ 'disabled' if broker_name != 'zebu' }}>Zebu {{ '(Disabled)' if broker_name != 'zebu' }}</option>
-                                <option value="zerodha" {{ 'disabled' if broker_name != 'zerodha' }}>Zerodha {{ '(Disabled)' if broker_name != 'zerodha' }}</option>
+                                <option value="fivepaisa" {{ 'disabled' if 'fivepaisa' not in (configured_brokers or []) and broker_name != 'fivepaisa' }}>5 Paisa {{ '(Disabled)' if 'fivepaisa' not in (configured_brokers or []) and broker_name != 'fivepaisa' }}</option>
+                                <option value="fivepaisaxts" {{ 'disabled' if 'fivepaisaxts' not in (configured_brokers or []) and broker_name != 'fivepaisaxts' }}>5 Paisa (XTS) {{ '(Disabled)' if 'fivepaisaxts' not in (configured_brokers or []) and broker_name != 'fivepaisaxts' }}</option>
+                                <option value="aliceblue" {{ 'disabled' if 'aliceblue' not in (configured_brokers or []) and broker_name != 'aliceblue' }}>Alice Blue {{ '(Disabled)' if 'aliceblue' not in (configured_brokers or []) and broker_name != 'aliceblue' }}</option>
+                                <option value="angel" {{ 'disabled' if 'angel' not in (configured_brokers or []) and broker_name != 'angel' }}>Angel One {{ '(Disabled)' if 'angel' not in (configured_brokers or []) and broker_name != 'angel' }}</option>
+                                <option value="compositedge" {{ 'disabled' if 'compositedge' not in (configured_brokers or []) and broker_name != 'compositedge' }}>CompositEdge {{ '(Disabled)' if 'compositedge' not in (configured_brokers or []) and broker_name != 'compositedge' }}</option>
+                                <option value="dhan" {{ 'disabled' if 'dhan' not in (configured_brokers or []) and broker_name != 'dhan' }}>Dhan {{ '(Disabled)' if 'dhan' not in (configured_brokers or []) and broker_name != 'dhan' }}</option>
+                                <option value="dhan_sandbox" {{ 'disabled' if 'dhan_sandbox' not in (configured_brokers or []) and broker_name != 'dhan_sandbox' }}>Dhan (Sandbox) {{ '(Disabled)' if 'dhan_sandbox' not in (configured_brokers or []) and broker_name != 'dhan_sandbox' }}</option>
+                                <option value="firstock" {{ 'disabled' if 'firstock' not in (configured_brokers or []) and broker_name != 'firstock' }}>Firstock {{ '(Disabled)' if 'firstock' not in (configured_brokers or []) and broker_name != 'firstock' }}</option>
+                                <option value="flattrade" {{ 'disabled' if 'flattrade' not in (configured_brokers or []) and broker_name != 'flattrade' }}>Flattrade {{ '(Disabled)' if 'flattrade' not in (configured_brokers or []) and broker_name != 'flattrade' }}</option>
+                                <option value="fyers" {{ 'disabled' if 'fyers' not in (configured_brokers or []) and broker_name != 'fyers' }}>Fyers {{ '(Disabled)' if 'fyers' not in (configured_brokers or []) and broker_name != 'fyers' }}</option>
+                                <option value="groww" {{ 'disabled' if 'groww' not in (configured_brokers or []) and broker_name != 'groww' }}>Groww {{ '(Disabled)' if 'groww' not in (configured_brokers or []) and broker_name != 'groww' }}</option>
+                                <option value="ibulls" {{ 'disabled' if 'ibulls' not in (configured_brokers or []) and broker_name != 'ibulls' }}>Ibulls {{ '(Disabled)' if 'ibulls' not in (configured_brokers or []) and broker_name != 'ibulls' }}</option>
+                                <option value="iifl" {{ 'disabled' if 'iifl' not in (configured_brokers or []) and broker_name != 'iifl' }}>IIFL {{ '(Disabled)' if 'iifl' not in (configured_brokers or []) and broker_name != 'iifl' }}</option>
+                                <option value="jainam" {{ 'disabled' if 'jainam' not in (configured_brokers or []) and broker_name != 'jainam' }}>Jainam (Retail) {{ '(Disabled)' if 'jainam' not in (configured_brokers or []) and broker_name != 'jainam' }}</option>
+                                <option value="jainampro" {{ 'disabled' if 'jainampro' not in (configured_brokers or []) and broker_name != 'jainampro' }}>Jainam (Dealer) {{ '(Disabled)' if 'jainampro' not in (configured_brokers or []) and broker_name != 'jainampro' }}</option>
+                                <option value="kotak" {{ 'disabled' if 'kotak' not in (configured_brokers or []) and broker_name != 'kotak' }}>Kotak Securities {{ '(Disabled)' if 'kotak' not in (configured_brokers or []) and broker_name != 'kotak' }}</option>
+                                <option value="paytm" {{ 'disabled' if 'paytm' not in (configured_brokers or []) and broker_name != 'paytm' }}>Paytm Money {{ '(Disabled)' if 'paytm' not in (configured_brokers or []) and broker_name != 'paytm' }}</option>
+                                <option value="pocketful" {{ 'disabled' if 'pocketful' not in (configured_brokers or []) and broker_name != 'pocketful' }}>Pocketful {{ '(Disabled)' if 'pocketful' not in (configured_brokers or []) and broker_name != 'pocketful' }}</option>
+                                <option value="shoonya" {{ 'disabled' if 'shoonya' not in (configured_brokers or []) and broker_name != 'shoonya' }}>Shoonya {{ '(Disabled)' if 'shoonya' not in (configured_brokers or []) and broker_name != 'shoonya' }}</option>
+                                <option value="tradejini" {{ 'disabled' if 'tradejini' not in (configured_brokers or []) and broker_name != 'tradejini' }}>Tradejini {{ '(Disabled)' if 'tradejini' not in (configured_brokers or []) and broker_name != 'tradejini' }}</option>
+                                <option value="upstox" {{ 'disabled' if 'upstox' not in (configured_brokers or []) and broker_name != 'upstox' }}>Upstox {{ '(Disabled)' if 'upstox' not in (configured_brokers or []) and broker_name != 'upstox' }}</option>
+                                <option value="wisdom" {{ 'disabled' if 'wisdom' not in (configured_brokers or []) and broker_name != 'wisdom' }}>Wisdom Capital{{ '(Disabled)' if 'wisdom' not in (configured_brokers or []) and broker_name != 'wisdom' }}</option>
+                                <option value="zebu" {{ 'disabled' if 'zebu' not in (configured_brokers or []) and broker_name != 'zebu' }}>Zebu {{ '(Disabled)' if 'zebu' not in (configured_brokers or []) and broker_name != 'zebu' }}</option>
+                                <option value="zerodha" {{ 'disabled' if 'zerodha' not in (configured_brokers or []) and broker_name != 'zerodha' }}>Zerodha {{ '(Disabled)' if 'zerodha' not in (configured_brokers or []) and broker_name != 'zerodha' }}</option>
                             </select>
                         </div>
                         <button type="submit" class="btn btn-primary w-full">
